--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Responsive Hospital Website Design</title>
+    <link rel="shortcut icon" href="./image/images (1).jpg" type="image/x-icon">
     <!-- fontawesome cdn link -->
     <link rel="stylesheet" href="css/all.min.css">
     <!-- custom css link -->
@@ -15,8 +16,8 @@
     <header class="header">
         <a href="#" class="logo"><i class="fas fa-heartbeat"></i> medcare.</a>
         <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#services">services</a>
+            <a href="#home">Home</a>
+            <a href="#services">Our Services</a>
             <a href="#about">about</a>
             <a href="#doctors">doctors</a>
             <a href="#book">book</a>
