--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- home section starts -->
     <section class="home" id="home">
         <div class="image">
-            <img src="./image/images__1_-removebg-preview.png" alt="" srcset="">
+            <img src="./image/undraw_doctors_p6aq.svg" alt="" srcset="">
         </div>
         <div class="content">
             <h3>stay safe, stay healthy</h3>
